src/k8s/base/http/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http
  labels:
    component: http
  # annotations:
  #   kubernetes.io/ingress.allow-http: "true"
  #   kubernetes.io/ingress.global-static-ip-name: base-ip-address
  #   networking.gke.io/managed-certificates: "base-certificate"
spec:
  rules:
  - http:
      paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: http
              port:
                number: 80
